<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fafafa">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#fafafa"
        android:stateListAnimator="@animator/toolbar_elevation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/user_avatar"
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="fitCenter"
            tools:srcCompat="@drawable/ic_baseline_person_24"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_avatar"
            android:text="@string/user_login"
            android:textStyle="bold"
            android:textSize="28sp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/user_login"
            app:layout_constraintStart_toEndOf="@id/user_avatar"
            android:text="@string/user_full_name"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="2dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/user_id"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_repository_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        tools:listitem="@layout/item_git_repository"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="10"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="3"
        android:scaleY="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />


</androidx.constraintlayout.widget.ConstraintLayout>